--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "stylelint-config-standard": "^17.0.0"
   },
   "scripts": {
-    "lint-staged": "$(yarn bin)/lint-staged",
-    "lint-staged": {
-      "config/webpack/**/*.js": [
-        "prettier --write",
-        "eslint",
-        "git add"
-      ],
-      "frontend/**/*.js": [
-        "prettier --write",
-        "eslint",
-        "git add"
-      ],
-      "frontend/**/*.css": [
-        "prettier --write",
-        "stylelint --fix",
-        "git add"
-      ]
-    },
-    "pre-commit": [
-      "lint-staged"
+    "lint-staged": "$(yarn bin)/lint-staged"
+  },
+  "lint-staged": {
+    "config/webpack/**/*.js": [
+      "prettier --write",
+      "eslint",
+      "git add"
+    ],
+    "frontend/**/*.js": [
+      "prettier --write",
+      "eslint",
+      "git add"
+    ],
+    "frontend/**/*.css": [
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
     ]
-  }
+  },
+  "pre-commit": [
+    "lint-staged"
+  ]
 }
